tests/errors/assert-failure.kawa
var int x;
var int y;

class Math {

  method void constructor() { }

  @{static}
  method int max(int a, int b) {
    if (a > b) {
      return a;
    } else {
      return b;
    }
  }

  @{static}
  method int min(int a, int b) {
    if (a < b) {
      return a;
    } else {
      return b;
    }
  }

  @{static}
  method int pow(int x, int n) {
    assert n >= 0;
    if (n == 0) {
      return 1;
    } else {
      return x * Math.pow(x, n - 1);
    }
  }

}

main {
  x = 4;
  y = -2;
  printf("max(%d,%d)=%d\n", x, y, Math.max(x, y)); // OK
  printf("min(%d,%d)=%d\n", x, y, Math.min(x, y)); // OK
  printf("pow(%d,%d)=%d\n", x, y, Math.pow(x, y)); // Déclenchement du assert car y < 0
  return 0;
}
